--- a/src/lang/translations/en.json
+++ b/src/lang/translations/en.json
@@ -36,12 +36,14 @@
   "next": "Next",
   "saveService": "Save a service",
   "baseInfo": "Basic information",
+  "serviceName": "Service Name",
   "selectCategory": "Select a category",
   "descriptionUtilBasicInfo": "Une description détaillée aidera les utilisateurs à comprendre votre service. en anglais",
-  "descriptionUtilBasicInfoImage": "Image principale du service – elle sera visible par vos clients en anglais",
+  "descriptionUtilBasicInfoImage": "Primary service image – It will be visible to your customers",
   "description": "Description",
-  "mainImage": "Image principale du service en anglais",
-  "chooseImage": "Choose a image" ,
+  "mainImage": "Primary service image",
+  "chooseImage": "Choose an image" ,
+  "uploadImage": "Upload image",
   "pleaseGiveInfo": "Please give all Informations for your service.",
   "errorLoad": "Error to load Google Maps :",
   "loadprogressing": "Loading map in progress",
@@ -69,6 +71,13 @@
   "policy&rules": "Policy and Rule",
   "descriptionToPolicy": "Décrivez vos politiques d'annulation, règles de l'établissement, etc. en anglias",
   "payementMethod": "Payement method accepted",
+  "baseInfos": "Base Information",
+  "contact": "Contact",
+  "operational": "Operational",
+  "additional": "Additional",
+  "saveServiceForm": "Service enrollment",
+  "addNewService": "Add a new service: Please fill out the form below",
+  "noFileSelected": "No file selected",
   "navbar": {
     "noResult" : "No found",
     "space": "Current Location",
