--- a/src/lang/translations/fr.json
+++ b/src/lang/translations/fr.json
@@ -36,12 +36,14 @@
   "next": "Suivant",
   "saveService": "Enregistrer le Service",
   "baseInfo": "Informations de base",
+  "serviceName": "Nom du service",
   "selectCategory": "Sélectionnez une catégorie",
   "descriptionUtilBasicInfo": "Une description détaillée aidera les utilisateurs à comprendre votre service.",
   "descriptionUtilBasicInfoImage": "Image principale du service – elle sera visible par vos clients",
   "mainImage": "Image principale du service",
   "description": "Description",
   "chooseImage": "Choisir l'image" ,
+  "uploadImage": "Uploader l'image",
   "pleaseGiveInfo": "Veuillez fournir les informations principales concernant votre service.",
   "errorLoad": "Erreur de chargement de Google Maps:",
   "loadprogressing": "Chargement de la carte en cours",
@@ -69,6 +71,13 @@
   "policy&rules": "Politiques et règlements",
   "descriptionToPolicy": "Politiques et règlements",
   "payementMethod": "Modes de paiement acceptés",
+  "baseInfos": "Informations",
+  "contact": "Contact",
+  "operational": "Opérationnel",
+  "additional": "Supplémentaire",
+  "saveServiceForm": "Enregistrement d'un Service",
+  "addNewService": "Complétez le formulaire ci-dessous pour ajouter un nouveau service",
+  "noFileSelected": "Aucun fichier sélectionné",
   "navbar": {
     "noResult" : "Pas trouver",
     "space": "Emplacement actuel",
