--- a/src/lang/translations/fr.json
+++ b/src/lang/translations/fr.json
@@ -34,6 +34,7 @@
   "previous": "Précédent",
   "password": "Mot de passe",
   "next": "Suivant",
+  "other": "autres",
   "saveService": "Enregistrer le Service",
   "baseInfo": "Informations de base",
   "serviceName": "Nom du service",
