--- a/src/lang/translations/en.json
+++ b/src/lang/translations/en.json
@@ -34,6 +34,7 @@
   "previous": "Previous",
   "password": "Password",
   "next": "Next",
+  "other": "others",
   "saveService": "Save a service",
   "baseInfo": "Basic information",
   "serviceName": "Service Name",
