refactor serviceForm step 3

--- a/src/lang/translations/en.json
+++ b/src/lang/translations/en.json
@@ -7,6 +7,8 @@
   "first_name": "First Name",
   "middle_name": "Middle Name",
   "last_name": "Last Name",
+  "your_last_name": "Your Last Name",
+  "your_first_name": "Your First Name",
   "id": "ID",
   "status": "Status",
   "gender": "Gender",
@@ -33,14 +35,20 @@
   "read": "Read",
   "previous": "Previous",
   "password": "Password",
+  "confirmPassword": "Confirm Password",
+  "forgotPassword": "Forgot Password?",
   "next": "Next",
   "other": "others",
+  "exampleServiceName": "Ex: Restaurant Le Gourmet",
+  "serviceDescriptionPlaceholder": "Describe your service in detail...",
   "saveService": "Save a service",
   "baseInfo": "Basic information",
   "serviceName": "Service Name",
   "selectCategory": "Select a category",
-  "descriptionUtilBasicInfo": "Une description détaillée aidera les utilisateurs à comprendre votre service. en anglais",
+  "descriptionUtilBasicInfo": "A detailed description will help users understand your service better",
   "descriptionUtilBasicInfoImage": "Primary service image – It will be visible to your customers",
+  "nameOfService": "Name of the service",
+  "searchAddress": "Search your address...",
   "description": "Description",
   "mainImage": "Primary service image",
   "chooseImage": "Choose an image" ,
@@ -49,11 +57,11 @@
   "errorLoad": "Error to load Google Maps :",
   "loadprogressing": "Loading map in progress",
   "positionMap": "Position on a map",
-  "descriptionTodoInMap": "Cliquez sur la carte selon votre addresse recherchez pour définir l'emplacement de votre service. en anglais",
+  "descriptionTodoInMap": "Click on the map according to your searched address to define your service location",
   "infoContact": "Contact Informations",
   "infoConnectDashboard": "Connection Informations in your Dashboard",
   "webSite": "Web Site",
-  "descriptioncontactInfo": "Comment les clients peuvent-ils vous contacter et vous trouver? en anglais",
+  "descriptioncontactInfo": "How can customers contact and find you?",
   "optional": "Optional",
   "infoOperatinal": "Operationals Informations",
   "detailsOnHour": "Details on il faut completer en anglais",
