--- a/src/lang/translations/fr.json
+++ b/src/lang/translations/fr.json
@@ -7,6 +7,8 @@
   "first_name": "Prénom",
   "middle_name": "Deuxième prénom",
   "last_name": "Nom de famille",
+  "your_last_name": "Votre nom de famille",
+  "your_first_name": "Votre prénom",
   "id": "ID",
   "status": "Statut",
   "gender": "Genre",
@@ -33,14 +35,20 @@
   "read": "Lire",
   "previous": "Précédent",
   "password": "Mot de passe",
+  "confirmPassword": "Confirmer le mot de passe",
+  "forgotPassword": "Mot de passe oublié ?",
   "next": "Suivant",
   "other": "autres",
+  "exampleServiceName": "Eg: Le Gourmet Restaurant",
+  "serviceDescriptionPlaceholder": "Décrivez votre service en détail...",
   "saveService": "Enregistrer le Service",
   "baseInfo": "Informations de base",
   "serviceName": "Nom du service",
   "selectCategory": "Sélectionnez une catégorie",
   "descriptionUtilBasicInfo": "Une description détaillée aidera les utilisateurs à comprendre votre service.",
   "descriptionUtilBasicInfoImage": "Image principale du service – elle sera visible par vos clients",
+  "nameOfService": "Nom du service",
+  "searchAddress": "Rechercher votre adresse...",
   "mainImage": "Image principale du service",
   "description": "Description",
   "chooseImage": "Choisir l'image" ,
