--- a/src/lang/translations/en.json
+++ b/src/lang/translations/en.json
@@ -735,5 +735,6 @@
   "disponibility": "Disponibility",
   "room": "Room",
   "pricePerNight": "Price per night",
-  "availability": "Availability"
+  "availability": "Availability",
+  "notAvaible": "Not avaible"
 }
