--- a/src/lang/translations/en.json
+++ b/src/lang/translations/en.json
@@ -340,7 +340,7 @@
   "les_meilleurs": "The Best",
   "recommand": "Recommanded",
   "trie": "Sort",
-  "welcome": "Welcome Back",
+  "welcome": "Welcome",
   "or": "OR",
   "login_with_google": "Continue With Google",
   "login_with_apple": "Log in With Apple",
@@ -737,5 +737,21 @@
   "pricePerNight": "Price per night",
   "availability": "Availability",
   "notAvaible": "Not avaible",
-  "enter_address":"Enter Address"
+  "enter_address":"Enter Address",
+  "create_account" : "Create an Account",
+  "join_us" : "Join our platform in just a few clicks",
+  "security_criteria" : "Safety criteria",
+  "character" : "characters",
+  "uppercase" : "Uppercase",
+  "lowercase" : "Lowercase",
+  "number" : "Number",
+  "accept_the" : "I accept the",
+  "terms_of" : "Terms of use",
+  "and_the" : "and the",
+  "policy" : "Privacy Policy",
+  "create_my" : "Create my Account",
+  "you_have_already_an_account" : "Already have an account ?",
+  "keep_me" : "keep me logged in",
+  "login_into" : "Log in to your account",
+  "sign_up" : "Sign Up"
 }
