--- a/src/lang/translations/fr.json
+++ b/src/lang/translations/fr.json
@@ -362,7 +362,7 @@
   "ajouter": "Add",
   "ajouter_commerce": "Ajouter Commerce",
   "form": "Formulaire d'Informations",
-  "welcome": "Content de vous revoir",
+  "welcome": "Bienvenue",
   "or": "Ou",
   "login_with_google": "Continuer avec Google",
   "login_with_apple": "Connectez-vous avec Apple",
@@ -724,6 +724,25 @@
   "see_more_review": "Voir plus d'avis",
   "customer_review": "Avis des clients",
   "discovery_experiance": "Découvrez les expériences authentiques et les retours détaillés de nos clients.",
-  "pricePerNight": "Prix par nuit"
+  "pricePerNight": "Prix par nuit",
+  "create_account": "Créer un compte",
+  "join_us": "Rejoignez notre plateforme en quelques clics",
+  "security_criteria": "Critères de sécurité",
+  "character": "caractères",
+  "uppercase": "Majuscule",
+  "lowercase": "Minuscule",
+  "number": "Chiffre",
+  "accept_the": "J'accepte les",
+  "terms_of": "Conditions d'utilisation",
+  "and_the": "et la",
+  "policy": "Politique de confidentialité",
+  "create_my": "Créer mon compte",
+  "you_have_already_an_account": "Vous avez déjà un compte ?",
+  "availability": "Disponibilité",
+  "notAvaible": "Non disponible",
+  "enter_address": "Entrez l'adresse",
+  "keep_me": "Rester connecté",
+  "login_into": "Connectez-vous à votre compte",
+  "sign_up": "S'inscrire"
 
 }
