--- a/src/lang/translations/fr.json
+++ b/src/lang/translations/fr.json
@@ -743,6 +743,35 @@
   "enter_address": "Entrez l'adresse",
   "keep_me": "Rester connecté",
   "login_into": "Connectez-vous à votre compte",
-  "sign_up": "S'inscrire"
+  "sign_up": "S'inscrire",
+  "Restaurants": "Restaurants",
+  "Nightlife": "Vie nocturne",
+  "Shopping": "Shopping",
+  "Sports & Leisure Activities": "Sports et activités de loisirs",
+  "Beauty Salons & Spas": "Salons de beauté et spas",
+  "Automobile": "Automobile",
+  "Houses & Works": "Maisons et travaux",
+  "Power Supplies": "Fournitures électriques",
+  "Art & Leisure": "Art et loisirs",
+  "Health & Medical": "Santé et médecine",
+  "Services for Professionals": "Services pour professionnels",
+  "Pets": "Animaux",
+  "Hotels & Stays": "Hôtels et séjours",
+  "Local Services": "Services locaux",
+  "Event Organization": "Organisation d'événements",
+  "Public Services & Government": "Services publics et gouvernement",
+  "Financial Services": "Services financiers",
+  "Training & Teaching": "Formation et enseignement",
+  "Religious Organization": "Organisation religieuse",
+  "Coffees & Teas": "Cafés et thés",
+  "view_more": "Voir plus",
+  "starting_from": "À partir de",
+  "per_person": "par personne",
+  "likes": "like",
+  "find_business": "Trouver une entreprise",
+  "search_heading": "Recherchons votre commerce",
+  "search_description": "Votre commerce est peut-être déjà sur Enjoy. S'il n'y est pas, vous pouvez l'ajouter.",
+  "start": "Commencer"
+
 
 }
