--- a/src/lang/translations/en.json
+++ b/src/lang/translations/en.json
@@ -774,5 +774,12 @@
   "Training & Teaching": "Training & Teaching",
   "Religious Organization": "Religious Organization",
   "Coffees & Teas": "Coffees & Teas",
-  "view_more": "View More"
+  "view_more": "View More",
+  "starting_from": "Starting from",
+  "per_person": "per person",
+  "likes": "like",
+  "find_business": "Find Business",
+  "search_heading": "Let’s find your business",
+  "search_description": "Your business might already be on Enjoy. If not, you can add it.",
+  "start": "Start"
 }
