--- a/src/lang/translations/en.json
+++ b/src/lang/translations/en.json
@@ -273,7 +273,8 @@
     "Organisation religieuse": "Religious Organization",
     "Travel": "Travel",
     "Média": "Media",
-    "Cafés & Thés": "Coffees & Teas"
+    "Cafés & Thés": "Coffees & Teas",
+    "Attractions Touristiques" : "Tourist Attractions"
   },
   "places": {
     "Le Gourmet": {
