--- a/src/lang/translations/fr.json
+++ b/src/lang/translations/fr.json
@@ -698,6 +698,7 @@
     "Transportation": "Transport",
     "Travel agency": "Agence de voyage",
     "Media": "Médias",
+    "Attractions Touristiques" : "Attractions Touristiques",
     "Restoration": "Restauration",
     "Restaurant": "Restaurant",
     "Wine cellar": "Cave à vins",
